# demon

./: .gitignore  Cargo.toml  Readme.md  cats.db  day.db  sample.toml
conception/: aboutrusqlite.rs  delivery.drawio  draft20200712.drawio  exampleofrusqlite.rs  memo.md
go/: day.go  foo.db
src/: 1.rs  assert.rs  box-base.rs  check.rs  collection1.rs  collection2.rs  construct.rs  db.rs  entry.rs  files.rs  functions.rs  hash.rs  impls.rs  iters.rs  lib.rs  m.rs  main.rs  mainbak.rs  mbak.rs  once.rs  rc.rs  sqlite.sql  strings.rs  struct.rs  structs.rs  tcow.rs  th.rs  thread.rs  tmove.rs  tmutex.rs  tref.rs  watch.rs
src/ffi/: 1.c
tests/: testfunctions.rs
