[package]
name = "demon"
version = "0.0.1"
authors = ["rdigua <digua@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# local_ipaddress = "0.1.3"
# toml = "0.5.6"
# dirs = "3.0.1"
# rusqlite="0.23.1"
# [dependencies.rusqlite]
# version = "0.21.0"
# features = ["bundled"]

# [dependencies.pnet]
# version = "0.26.0"
# hex-slice = "0.1.4" 
# toml = "0.5.6"
# dirs = "3.0.1"
# rusqlite="0.23.1"
# [dependencies.rusqlite]
# version = "0.21.0"
# features = ["bundled"]
