[package]
name = "demon"
version = "0.1.0"
authors = ["rdigua <digua@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde_derive="1.0.115"
serde ={ version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

