[package]
name = "demon"
version = "0.0.1"
authors = ["rdigua <digua@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml="0.5.6"
serde_derive = "1.0.104"
serde = "1.0.104"
datetime = "0.4.7"


[[bin]]
name = "f"
src = "./bin/f.rs"

[[bin]]
name = "m"
src = "./bin/m.rs"